--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,8 +6,11 @@
     android:orientation="vertical">
 
     <LinearLayout
+
+        android:paddingTop="25dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
+        android:background="#FAFAFA"
         android:orientation="horizontal">
 
 
@@ -23,15 +26,16 @@
                 android:id="@+id/assets_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Assets"
-                android:textSize="18dp"/>
+                android:text="@string/assets_label"
+                android:textSize="14sp"/>
 
             <TextView
+                android:id="@+id/total_assets_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#04BF17"
-                android:text="$5,555,551.00"
-                android:textSize="16dp"/>
+                android:textColor="@color/green_money"
+                android:text="@string/assets_value"
+                android:textSize="20sp"/>
 
         </LinearLayout>
 
@@ -46,16 +50,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Debts"
-                android:textSize="18dp"/>
+                android:text="@string/debts_label"
+                android:textSize="14sp"/>
 
             <TextView
-                android:id="@+id/debts_textview"
+                android:id="@+id/total_debts_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#BF2020"
-                android:text="$0.95"
-                android:textSize="16dp"/>
+                android:textColor="@color/red_money"
+                android:text="@string/debts_value"
+                android:textSize="20sp"/>
 
         </LinearLayout>
 
@@ -64,63 +68,93 @@
     <LinearLayout
         android:id="@+id/networth_bar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
-        android:background="#36c320"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:background="#FAFAFA"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_weight="1.2"
             android:fontFamily="sans-serif"
-            android:text="NET WORTH:"
-            android:textColor="#ffffff"
-            android:textSize="22sp" />
+            android:gravity="center"
+            android:text="@string/networth_label"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/networth_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
+            android:gravity="center"
             android:fontFamily="sans-serif"
-            android:gravity="right"
-            android:text="$5,555,550.05"
-            android:textColor="#ffffff"
-            android:textSize="26sp" />
+            android:textColor="@color/green_money"
+            android:text="@string/networth_value"
+            android:textSize="32sp"
+            />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#646464"
+        />
+
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#f0f0f0"
+        android:choiceMode="singleChoice"
+        android:dividerHeight="0dp"
+        android:divider="@null"
+
+
+        />
+
+    <TextView
+        android:layout_marginTop="56dp"
+        android:id="@+id/no_accounts_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textSize="18sp"
+        android:text="@string/no_accounts_msg"/>
+
     <Button
         android:id="@+id/add_account_button"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_alignParentBottom="true"
         android:textSize="22sp"
-        android:text="Add Account"
+        android:text="@string/add_account"
         android:textColor="#ffffff"
-        android:background="#CC278BBF"
+        android:background="#00C8C8"
         android:layout_marginBottom="10dp"
-        />
-
-    <ListView
-        android:id="@+id/account_listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:divider="#278BBF"
-        android:dividerHeight="1dp"
-
-
-
         />
     </RelativeLayout>
 
 
 </LinearLayout>
+
+
+    <!-- Not used
+            <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textSize="18sp"
+        android:text="@string/accounts_list_title"/>
+    <View
+        android:layout_marginLeft="5dp"
+        android:layout_width="90dp"
+        android:layout_height="1dp"
+        android:background="#00C8C8"/>
+            -->
