--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,42 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
         <!-- Customize your theme here. -->
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:logo">@android:color/transparent</item>
+        <item name="android:textViewStyle">@style/MyTextViewStyle</item>
     </style>
 
+
+
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">@drawable/cyan</item>
+        <item name="android:titleTextStyle">@style/TitleTextStyle</item>
+
+    </style>
+
+    <style name="TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/title_text</item>
+    </style>
+
+
+    <style name="MyTextViewStyle" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/textview</item>
+    </style>
+
+
+
+
+    <style name="Widget">
+    </style>
+
+    <style name="Widget.ProgressBar">
+    </style>
+
+    <style name="Widget.ProgressBar.Vertical">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/vertical_progressbar</item>
+        <item name="android:indeterminateDrawable">@android:drawable/progress_indeterminate_horizontal</item>
+        <item name="android:minWidth">1dip</item>
+        <item name="android:maxWidth">12dip</item>
+    </style>
 </resources>
