--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -4,40 +4,37 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ListView
+        android:id="@+id/budget_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:dividerHeight="0dp"
-            android:divider="@null"
-            android:paddingBottom="70dp"
-            android:clipToPadding="false"
-            android:id="@+id/budget_listview"
-            />
-
+        android:clipToPadding="false"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:paddingBottom="70dp" />
 
 
     <TextView
-        android:layout_marginTop="86dp"
         android:id="@+id/no_budgets_textview"
         android:layout_width="342dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="86dp"
         android:gravity="center_horizontal"
-        android:textSize="18sp"
         android:text="@string/no_budgets_msg"
-        />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/add_budget_button"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="22sp"
+        android:layout_marginBottom="10dp"
+        android:background="#00C8C8"
         android:text="@string/add_budget"
         android:textColor="#ffffff"
-        android:background="#00C8C8"
-        android:layout_marginBottom="10dp"
+        android:textSize="22sp"
 
         />
 
@@ -47,12 +44,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textSize="22sp"
+        android:layout_marginBottom="10dp"
+        android:background="#CC00C8C8"
         android:text="@string/add_transactions"
         android:textColor="#ffffff"
-        android:background="#CC00C8C8"
-        android:layout_marginBottom="10dp"
-        />
+        android:textSize="22sp" />
 
 
 </RelativeLayout>
