--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 
     <color name="textview">#646464</color>
 
+    <color name="black">#000000</color>
 
     <color name="light_grey">#D6D6D6</color>
 
