--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,32 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
+    <style name="AppTheme" parent="android:Theme.Holo.Light">
         <!-- Customize your theme here. -->
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:logo">@android:color/transparent</item>
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
+
     </style>
 
+
+
+    <style name="Black">
+        <item name="android:textColor">@color/black</item>
+
+    </style>
+
+    <style name="MyCalendarView" parent="@android:style/Widget.CalendarView">
+        <item name="android:showWeekNumber">true</item>
+        <item name="android:minDate">01/01/2016</item>
+        <item name="android:maxDate">12/31/2100</item>
+        <item name="android:shownWeekCount">6</item>
+        <item name="android:selectedWeekBackgroundColor">#330099FF</item>
+        <item name="android:focusedMonthDateColor">#FFFFFFFF</item>
+        <item name="android:unfocusedMonthDateColor">#66FFFFFF</item>
+        <item name="android:weekNumberColor">#33FFFFFF</item>
+        <item name="android:weekSeparatorLineColor">#19FFFFFF</item>
+    </style>
 
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
@@ -24,7 +43,6 @@
     <style name="MyTextViewStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/textview</item>
     </style>
-
 
 
 
