--- a/app/src/main/res/layout/budget_dialog.xml
+++ b/app/src/main/res/layout/budget_dialog.xml
@@ -52,6 +52,7 @@
         android:background="@null"
         android:textStyle="bold"
         android:textColor="#00C8C8"
+        android:fontFamily="sans-serif-light"
         android:text="Save"
         />
 
@@ -66,6 +67,7 @@
         android:background="@null"
         android:textStyle="bold"
         android:textColor="#00C8C8"
+        android:fontFamily="sans-serif-light"
         android:text="Cancel"/>
 
 
