--- a/app/src/main/res/layout/fragment_budget_v2draft.xml
+++ b/app/src/main/res/layout/fragment_budget_v2draft.xml
@@ -1,56 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-<TextView
-    android:id="@+id/overview_previous_label"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="16dp"
-    android:text="Last Month's Spend"
-    android:textSize="17sp"/>
+    <android.support.v7.widget.CardView
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        >
 
-    <TextView
-        android:id="@+id/overview_previous_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/overview_previous_label"
-        android:layout_marginTop="35dp"
-        android:layout_centerInParent="@id/overview_previous_label"
-        android:text="$1,200"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/overview_current_lablel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_toRightOf="@id/overview_previous_label"
-        android:layout_alignBaseline="@id/overview_previous_label"
-        android:layout_marginTop="25dp"
-        android:textSize="17sp"
-        android:text="This Month's Spend"/>
+        <TextView
+            android:id="@+id/overview_previous_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
+            android:textSize="17sp"
+            tools:text="Last Month's Spend"/>
 
-    <TextView
-        android:id="@+id/overview_current_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/overview_current_lablel"
-        android:layout_toRightOf="@id/overview_previous_value"
-        android:layout_alignBaseline="@id/overview_previous_value"
-        android:text="$1,000"/>
+        <TextView
+            android:id="@+id/overview_previous_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/overview_previous_label"
+            android:layout_centerInParent="@id/overview_previous_label"
+
+            android:text="$1,200" />
+
+        <TextView
+            android:id="@+id/overview_current_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+
+            tools:text="This Month's Spend:"
+            android:textSize="22sp" />
 
 
-    <TextView
-        android:id="@+id/overview_days_lablel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:text="Days remaining: 8"
-        android:textSize="18sp"/>
+        <TextView
+
+
+            android:id="@+id/overview_current_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignTop="@id/overview_current_label"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/overview_current_label"
+            android:textSize="44sp"
+            tools:text="$5,999" />
+
+
+        <TextView
+            android:id="@+id/overview_days_lablel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Days remaining: 8"
+            android:textSize="18sp" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+
 
 
     <ListView
