--- a/app/src/main/res/layout/fragment_budget_v3draft.xml
+++ b/app/src/main/res/layout/fragment_budget_v3draft.xml
@@ -5,53 +5,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_centerHorizontal="true"
-        android:layout_width="340dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"
-        card_view:cardCornerRadius="0dp">
-
-        <com.androidplot.xy.XYPlot
-            android:id="@+id/trans_trending_plot"
-            android:layout_width="335dp"
-            android:layout_height="190dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="-5dp"
-
-            androidPlot.title="Current Spend"
-            androidPlot.titleWidget.labelPaint.textSize="11sp"
-            androidPlot.titleWidget.labelPaint.Color="#646464"
-            androidPlot.titleWidget.paddingTop="0dp"
-
-            androidPlot.graphWidget.marginTop="20dp"
-            androidPlot.graphWidget.paddingTop="0dp"
-            androidPlot.graphWidget.marginLeft="25dp"
-            androidPlot.graphWidget.marginBottom="15dp"
-            androidPlot.graphWidget.backgroundPaint.Color="#FAFAFA"
-            androidPlot.graphWidget.gridBackgroundPaint.Color="#FAFAFA"
-            androidPlot.margin="0dp"
-            androidPlot.graphWidget.rangeLabelPaint.textSize="10sp"
-            androidPlot.graphWidget.DomainLabelPaint.textSize="10sp"
-            />
-    </android.support.v7.widget.CardView>
-
-
-
-
 
 
     <ListView
         android:id="@+id/budget_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="0dp"
         android:clipToPadding="false"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:paddingBottom="70dp" />
+        android:paddingBottom="70dp"
+        android:listSelector="@android:color/transparent"/>
 
 
     <TextView
