--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <color name="title_text">#ffffff</color>
+    <color name="white">#ffffff</color>
 
     <color name="theme">#00C8C8</color>
     <color name="actionbar">#00C8C8</color>
