--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,23 @@
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
 
+        <item name="android:buttonStyle">@style/MyButtonStyle</item>
+
+    </style>
+
+    <style name="MyButtonStyle" parent="@android:style/Widget.Holo.Light.Button">
+        <item name="android:textColor">@color/theme</item>
+        <item name="android:background">@null</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:minHeight">36dp</item>
+        <item name="android:minWidth">64dp</item>
+        <item name="android:padding">8dp</item>
+
+
+
+
+
     </style>
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
