Fixed description run-off, fixed graph errors

--- a/app/src/main/res/layout/list_item_budgetdetail.xml
+++ b/app/src/main/res/layout/list_item_budgetdetail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="35dp"
     android:gravity="center_vertical"
@@ -10,20 +11,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        />
-
+        tools:text="05/26/15" />
 
     <TextView
         android:id="@+id/bd_list_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="20dp"
         android:layout_alignBaseline="@id/bd_list_date"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@id/bd_list_date"
         android:textStyle="italic"
-        android:text="Dinner with Jenny"/>
-
-
+        tools:text="Dinner with Jenny" />
 
     <TextView
         android:id="@+id/bd_list_amount"
@@ -32,6 +30,6 @@
         android:layout_alignBaseline="@id/bd_list_date"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        />
+        tools:text="$69774.18" />
 
 </RelativeLayout>
