Refactored transaction dialog

--- a/app/src/main/res/layout/transaction_dialog.xml
+++ b/app/src/main/res/layout/transaction_dialog.xml
@@ -7,11 +7,12 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/trans_dialog_title"
         android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="New Transaction"
+        android:text="@string/new_transaction_title"
         android:textSize="24sp"
         android:textStyle="bold" />
 
