--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,19 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
+    <style name="AppTheme" parent="android:Theme.Holo.Light">
         <!-- Customize your theme here. -->
 
         <item name="android:logo">@android:color/transparent</item>
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
-
         <item name="android:buttonStyle">@style/MyButtonStyle</item>
+        <item name="drawerArrowStyle">@style/MyDrawerArrowStyle</item>
+
+    </style>
+
+    <style name="MyDrawerArrowStyle" parent="style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/white</item>
 
     </style>
 
@@ -20,7 +25,6 @@
         <item name="android:minHeight">36dp</item>
         <item name="android:minWidth">64dp</item>
         <item name="android:padding">8dp</item>
-
 
 
 
