--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+
 
     <ListView
         android:id="@+id/budget_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_marginTop="0dp"
         android:clipToPadding="false"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:paddingBottom="70dp" />
+        android:paddingBottom="70dp"
+        android:listSelector="@android:color/transparent"/>
 
 
     <TextView
