--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -40,7 +40,7 @@
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/bar_graph_cardview"
             android:layout_width="match_parent"
-            android:layout_height="225dp"
+            android:layout_height="190dp"
             android:layout_below="@id/pie_chart_cardview"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="7dp"
@@ -51,8 +51,9 @@
             <com.github.mikephil.charting.charts.HorizontalBarChart
                 android:id="@+id/reports_barchart"
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_height="170dp"
+                android:layout_marginTop="20dp"
+                />
 
             <TextView
                 android:layout_width="match_parent"
@@ -64,7 +65,39 @@
                 android:textSize="20sp" />
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/expensive_cardview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bar_graph_cardview"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="7dp"
+            card_view:cardCornerRadius="0dp"
+            card_view:cardElevation="4sp"
+            card_view:cardUseCompatPadding="true">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/theme"
+                android:gravity="center_horizontal"
+                android:text="Most Expensive Purchases"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_marginBottom="40dp"/>
+
+            <LinearLayout
+                android:id="@+id/expensive_linearlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+
+        </android.support.v7.widget.CardView>
 
 
 
