--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -51,8 +51,9 @@
             <com.github.mikephil.charting.charts.HorizontalBarChart
                 android:id="@+id/reports_barchart"
                 android:layout_width="match_parent"
-                android:layout_height="170dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="0dp"
                 />
 
             <TextView
