--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -1,106 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/pie_chart_cardview"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="7dp"
-            card_view:cardCornerRadius="0dp"
-            card_view:cardElevation="4sp"
-            card_view:cardUseCompatPadding="true">
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/reports_pichart"
-                android:layout_width="match_parent"
-                android:layout_height="280dp"
-                android:layout_marginTop="26dp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/reports_month_label"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/theme"
-                android:gravity="center_horizontal"
-                android:text="Top Spend by Category"
-                android:textColor="@color/white"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Month:"
                 android:textSize="20sp" />
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/bar_graph_cardview"
-            android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:layout_below="@id/pie_chart_cardview"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="7dp"
-            card_view:cardCornerRadius="0dp"
-            card_view:cardElevation="4sp"
-            card_view:cardUseCompatPadding="true">
-
-            <com.github.mikephil.charting.charts.HorizontalBarChart
-                android:id="@+id/reports_barchart"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="0dp"
-                />
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/reports_month_value"
+                style="@android:style/Widget.Material.EditText"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/theme"
-                android:gravity="center_horizontal"
-                android:text="Most Frequent Purchases"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/expensive_cardview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/bar_graph_cardview"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="7dp"
-            card_view:cardCornerRadius="0dp"
-            card_view:cardElevation="4sp"
-            card_view:cardUseCompatPadding="true">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/theme"
-                android:gravity="center_horizontal"
-                android:text="Most Expensive Purchases"
-                android:textColor="@color/white"
+                android:layout_alignBaseline="@id/reports_month_label"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/reports_month_label"
                 android:textSize="20sp"
-                android:layout_marginBottom="40dp"/>
+                android:textColor="@color/textview"
+                tools:text="June 2015" />
 
-            <LinearLayout
-                android:id="@+id/expensive_linearlayout"
+
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/pie_chart_cardview"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/reports_month_label"
+                android:layout_marginTop="7dp"
+                card_view:cardCornerRadius="0dp"
+                card_view:cardElevation="4sp"
+                card_view:cardUseCompatPadding="true">
+
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/reports_pichart"
+                    android:layout_width="match_parent"
+                    android:layout_height="280dp"
+                    android:layout_marginTop="26dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/theme"
+                    android:gravity="center_horizontal"
+                    android:text="Top Spend by Category"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/bar_graph_cardview"
+                android:layout_width="match_parent"
+                android:layout_height="190dp"
+                android:layout_below="@id/pie_chart_cardview"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="7dp"
+                card_view:cardCornerRadius="0dp"
+                card_view:cardElevation="4sp"
+                card_view:cardUseCompatPadding="true">
+
+                <com.github.mikephil.charting.charts.HorizontalBarChart
+                    android:id="@+id/reports_barchart"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginTop="20dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/theme"
+                    android:gravity="center_horizontal"
+                    android:text="Most Frequent Purchases"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/expensive_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:orientation="vertical">
+                android:layout_below="@id/bar_graph_cardview"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="7dp"
+                card_view:cardCornerRadius="0dp"
+                card_view:cardElevation="4sp"
+                card_view:cardUseCompatPadding="true">
 
-            </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+                    android:background="@color/theme"
+                    android:gravity="center_horizontal"
+                    android:text="Most Expensive Purchases"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
 
+                <LinearLayout
+                    android:id="@+id/expensive_linearlayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:orientation="vertical">
 
-        </android.support.v7.widget.CardView>
+                </LinearLayout>
 
+            </android.support.v7.widget.CardView>
 
+        </RelativeLayout>
+    </ScrollView>
 
-    </RelativeLayout>
-</ScrollView>
