--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,6 @@
     <color name="test4">#2EFE64</color>
     <color name="test5">#2EFE64</color>
 
+    <color name="light_blue">#8CEAFF</color>
+
 </resources>
