--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <RelativeLayout
+        android:id="@+id/reports_header_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/theme"
+        android:elevation="3dp">
+        <TextView
+            android:id="@+id/reports_month_label"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+
+            android:text="Selected Month:"
+            android:textColor="@color/white"
+
+
+            android:textSize="18sp" />
+
+
+        <TextView
+            android:id="@+id/reports_month_value"
+
+            style="@style/MySpinnerStyle"
+
+            android:backgroundTint="@color/white"
+
+            android:focusable="false"
+            android:layout_width="155dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/reports_month_label"
+
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="16dp"
+            android:layout_toRightOf="@id/reports_month_label"
+            android:gravity="start"
+            android:textSize="18sp"
+
+            android:textColor="@color/white"
+            tools:text="November 2015" />
+
+
+
+    </RelativeLayout>
+
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_below="@id/reports_header_layout"
         android:orientation="vertical">
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,31 +66,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/reports_month_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="16dp"
-                android:text="Report Month:"
-                android:fontFamily="sans-serif-medium"
-                android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/reports_month_value"
-                style="@android:style/Widget.Material.EditText"
-                android:focusable="false"
-                android:layout_width="172dp"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/reports_month_label"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="16dp"
-                android:layout_toRightOf="@id/reports_month_label"
-                android:gravity="start"
-                android:textSize="20sp"
-                android:textColor="@color/textview"
-                android:fontFamily="sans-serif-medium"
-                tools:text="November 2015" />
 
 
             <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -45,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@id/reports_month_label"
+
                 android:layout_marginTop="17dp"
                 card_view:cardCornerRadius="0dp"
                 card_view:cardElevation="4sp"
@@ -155,7 +184,14 @@
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:layout_below="@id/expensive_cardview"
+                />
 
         </RelativeLayout>
+
     </ScrollView>
 
+</RelativeLayout>
