--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,13 @@
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
         <item name="android:buttonStyle">@style/MyButtonStyle</item>
         <item name="drawerArrowStyle">@style/MyDrawerArrowStyle</item>
+        <item name="android:spinnerStyle">@style/MySpinnerStyle</item>
 
+    </style>
+
+    <style name="MySpinnerStyle" parent="android:style/Widget.Holo.Spinner">
+        <item name="background">@android:drawable/spinner_background</item>
+        <item name="android:tint">@color/white</item>
     </style>
 
     <style name="MyDrawerArrowStyle" parent="style/Widget.AppCompat.DrawerArrowToggle">
@@ -35,7 +41,16 @@
         <item name="android:background">@color/theme</item>
         <item name="android:titleTextStyle">@style/TitleTextStyle</item>
         <item name="titleTextStyle">@style/TitleTextStyle</item>
+    </style>
 
+    <style name="NoShadow" parent="style/AppTheme">
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="Material" parent="@android:style/Widget.Material.EditText">
+        <item name="android:editTextColor">@color/white</item>
+        <item name="android:editTextBackground">@color/white</item>
+        <item name="colorAccent">@color/white</item>
     </style>
 
     <style name="TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
